tests/expectations/parser/program/non_aleo_network_fail.out
Error [EPAR0370028]: Invalid network identifier. The only supported identifier is `.aleo`.
    --> test:2:14
     |
   2 | program test.eth {
     |              ^^^